# moonlike-gums

./: pyproject.toml
moonlike_gums/: brown_corpus.py  cli.py  gen.py  words.py
tests/: test_gen.py  test_words.py
