[tool.poetry]
name = "moonlike-gums"
version = "0.1.0"
description = ""
authors = ["Dudley Flanders <dudleyflanders@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hug = "^2.5"
nltk = "^3.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
